harness/test/errors/037_double_anaphora.eu
# Error: using _ more than once creates multiple parameters
result: [1,2,3] map(_ + _)
